--- a/index.html
+++ b/index.html
@@ -33,6 +33,42 @@
         .imgDiv p{
             padding: 0px 20px;
         }
+
+
+        input[type=text],select{
+            width: 100%;
+            padding: 10px 20px;
+            border-radius: 5px;
+            margin: 8px 0px;
+            box-sizing: border-box;
+            border: 1px solid red;
+        }
+        input[type=submit]{
+            width: 100%;
+            padding: 13px 0px;
+            background-color: lightgreen;
+            border: none;
+            color: white;
+            margin-top: 20px;
+        }
+        input[type=text]{
+            background-color: aquamarine;
+        }
+        input[type=text]:hover{
+            background-color: red;
+        }
+        .formGeneral{
+            background-color: lightgray;
+            padding: 20px;
+            margin: 10px 278px;
+        }
+        .footer{
+            background-color: chocolate;
+            height: 60px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
@@ -81,6 +117,24 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo consectetur, voluptatibus aliquam non minima. Necessitatibus dolorum doloremque expedita ullam laudantium soluta doloribus ex architecto numquam consectetur temporibus, cum autem.</p>
          </div>
      </div>
-    
+    <form class="formGeneral">
+        <label for="">Ad</label>
+        <input type="text" name="firstName" placeholder="Adınızı giriniz">
+        <label for="">Soyad</label>
+        <input type="text" name="lastName" placeholder="Soyadınızı giriniz">
+        <label for="">Ülke</label>
+        <select name="country" id="">
+            <option value="tr">Türkiye</option>
+            <option value="fr">Français</option>
+            <option value="en">England</option>
+        </select>
+        <input type="submit" value="Kaydet">
+    </form>
+
+    <div class="footer">
+        <h3>
+            Lorem && Tüm hakları saklıdır
+        </h3>
+    </div>
 </body>
 </html>
