--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
             text-decoration: none;
         }
 
+        .headerDiv{
+            display: flex; 
+            justify-content: center;
+        }
+        .bannerDiv{
+            background-image: url(./Images/banner.jpg); 
+            height: 400px; 
+            position: relative; 
+            margin-bottom: 30px;
+        }
+        .banner{
+            text-align: center; 
+            position: absolute; 
+            top: 30px; 
+            left: 0px; 
+            right: 0px;
+        }
         .imgDiv {
             width: 200px;
             border: 1px solid black;
@@ -45,8 +62,7 @@
         }
 
 
-        input[type=text],
-        select {
+        .formElement {
             width: 100%;
             padding: 10px 20px;
             border-radius: 5px;
@@ -55,7 +71,7 @@
             border: 1px solid red;
         }
 
-        input[type=submit] {
+        .btnSubmit{
             width: 100%;
             padding: 13px 0px;
             background-color: lightgreen;
@@ -64,11 +80,11 @@
             margin-top: 20px;
         }
 
-        input[type=text] {
+        .formElement:focus {
             background-color: aquamarine;
         }
 
-        input[type=text]:hover {
+        .formElement:hover {
             background-color: red;
         }
 
@@ -110,7 +126,18 @@
             .mobilIcon {
                 display: block;
             }
-            
+            .imgMainDiv{
+                flex-direction: column;
+            }
+            .imgDiv{
+                width: 100%;
+                margin-bottom: 30px;
+            }
+            .formGeneral{
+                width: 100%;
+                box-sizing: border-box;
+                margin: 0px;
+            }
         }
     </style>
 </head>
@@ -134,8 +161,8 @@
 
         </div>
     </header>
-    <div style="background-image: url(./Images/banner.jpg); height: 400px; position: relative; margin-bottom: 30px;">
-        <div style="text-align: center; position: absolute; top: 30px; left: 0px; right: 0px;">
+    <div class="bannerDiv">
+        <div class="banner">
             <h3>
                 Lorem, ipsum.
             </h3>
@@ -147,7 +174,7 @@
         </div>
     </div>
 
-    <div style="display: flex; justify-content: center;">
+    <div class="imgMainDiv">
         <div class="imgDiv">
             <img src="./Images/1.jpg" alt="">
             <h3>Lorem, ipsum.</h3>
@@ -179,16 +206,16 @@
     </div>
     <form class="formGeneral">
         <label for="">Ad</label>
-        <input type="text" name="firstName" placeholder="Adınızı giriniz">
+        <input class="formElement" type="text" name="firstName" placeholder="Adınızı giriniz">
         <label for="">Soyad</label>
-        <input type="text" name="lastName" placeholder="Soyadınızı giriniz">
+        <input class="formElement" type="text" name="lastName" placeholder="Soyadınızı giriniz">
         <label for="">Ülke</label>
-        <select name="country" id="">
+        <select class="formElement" name="country" id="">
             <option value="tr">Türkiye</option>
             <option value="fr">Français</option>
             <option value="en">England</option>
         </select>
-        <input type="submit" value="Kaydet">
+        <input class="btnSubmit" type="submit" value="Kaydet">
     </form>
 
     <div class="footer">
