--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            box-sizing: border-box;
+        }
         .mobilIcon {
             display: none;
         }
@@ -22,6 +25,8 @@
         .headerLink {
             margin-right: 10px;
             text-decoration: none;
+            color: black;
+            font-size: 18px;
         }
 
         .headerDiv{
@@ -41,11 +46,19 @@
             left: 0px; 
             right: 0px;
         }
+        .imgMainDiv{
+            display: flex;
+            justify-content: center;
+            margin: 30px 0px;
+            flex-wrap: wrap;
+        }
+        .imgResDiv{
+            flex: 25%;
+        }
         .imgDiv {
-            width: 200px;
-            border: 1px solid black;
+            border: 1px dashed black;
             border-radius: 30px;
-            margin-right: 30px;
+            margin: 20px;
         }
 
         .imgDiv img {
@@ -55,14 +68,32 @@
 
         .imgDiv h3 {
             text-align: center;
+            color: red;
         }
 
         .imgDiv p {
             padding: 0px 20px;
+            text-align: center;
         }
-
-
-        .formElement {
+        .imgDiv .pricePurchaseDiv{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+        .price{
+            font-size: 22px;
+            color: red;
+        }
+        .purchase{
+            padding: 15px 10px;
+            border-radius: 30px;
+            border: none;
+            background-color: green;
+            color: white;
+            width: 100px;
+        }
+        /* .formElement {
             width: 100%;
             padding: 10px 20px;
             border-radius: 5px;
@@ -92,15 +123,35 @@
             background-color: lightgray;
             padding: 20px;
             margin: 10px 278px;
-        }
+        } */
 
         .footer {
-            background-color: chocolate;
-            height: 60px;
+            background-color: lightcoral;
+            height: 150px;
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
             align-items: center;
+            margin-top: 30px;
         }
+        .footerList{
+            list-style: none;
+        }
+        .footerList a{
+            text-decoration: none;
+            color: black;
+            font-size: 18px;
+        }
+        .footerList li{
+            margin-top: 10px;
+        }
+
+        /* Tablet */
+        @media screen and (max-width: 900px){
+            .imgResDiv{
+                flex: 50%;
+            }
+        }
+        /* Tablet */
 
         /* Mobil */
         @media screen and (max-width: 600px) {
@@ -129,16 +180,31 @@
             .imgMainDiv{
                 flex-direction: column;
             }
-            .imgDiv{
-                width: 100%;
+            .imgResDiv{
+                flex: 100%;
+            }
+            .imgDiv{          
                 margin-bottom: 30px;
             }
-            .formGeneral{
+            /* .formGeneral{
                 width: 100%;
                 box-sizing: border-box;
                 margin: 0px;
+            } */
+
+            .footer{
+                flex-direction: column;
+                height: auto;
+            }
+            .footerList{
+                display: flex;
+                padding: 0px;
+            }
+            .footerList li{
+                margin-right: 10px;
             }
         }
+        /* Mobil */
     </style>
 </head>
 
@@ -149,7 +215,7 @@
                 <img src="./Images/icon.jpg" width="50px" height="50px" alt="">
             </div>
             <div>
-                <img class="headerImg" src="./Images/1.jpg" width="32px" height="32px" alt="">
+                <img class="headerImg" src="./Images/burgerlogo.png" height="50px" alt="">
             </div>
             <div id="navDiv" class="mobileLinkDisplay">
                 <div class="mobileLink">
@@ -175,36 +241,54 @@
     </div>
 
     <div class="imgMainDiv">
-        <div class="imgDiv">
-            <img src="./Images/1.jpg" alt="">
-            <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo consectetur, voluptatibus
-                aliquam non minima. Necessitatibus dolorum doloremque expedita ullam laudantium soluta doloribus ex
-                architecto numquam consectetur temporibus, cum autem.</p>
+        <div class="imgResDiv">
+            <div class="imgDiv">
+                <img src="./Images/burger.jpg" alt="">
+                <h3>Kasap Burger</h3>
+                <p>Bol Malzemeli Efsane Burger</p>
+                <div class="pricePurchaseDiv">
+                    <p class="price">45.99 <i>TL</i></p>
+                    <button class="purchase">Satın Al</button>
+                </div>
+            </div>
         </div>
-        <div class="imgDiv">
-            <img src="./Images/2.jpg" alt="">
-            <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo consectetur, voluptatibus
-                aliquam non minima. Necessitatibus dolorum doloremque expedita ullam laudantium soluta doloribus ex
-                architecto numquam consectetur temporibus, cum autem.</p>
+        <div class="imgResDiv">
+            <div class="imgDiv">
+                <img src="./Images/burger.jpg" alt="">
+                <h3>Kasap Burger</h3>
+                <p>Bol Malzemeli Efsane Burger</p>
+                <div class="pricePurchaseDiv">
+                    <p class="price">45.99 <i>TL</i></p>
+                    <button class="purchase">Satın Al</button>
+                </div>
+            </div>
         </div>
-        <div class="imgDiv">
-            <img src="./Images/3.jpg" alt="">
-            <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo consectetur, voluptatibus
-                aliquam non minima. Necessitatibus dolorum doloremque expedita ullam laudantium soluta doloribus ex
-                architecto numquam consectetur temporibus, cum autem.</p>
+        <div class="imgResDiv">
+            <div class="imgDiv">
+                <img src="./Images/burger.jpg" alt="">
+                <h3>Kasap Burger</h3>
+                <p>Bol Malzemeli Efsane Burger</p>
+                <div class="pricePurchaseDiv">
+                    <p class="price">45.99 <i>TL</i></p>
+                    <button class="purchase">Satın Al</button>
+                </div>
+            </div>
         </div>
-        <div class="imgDiv">
-            <img src="./Images/4.jpg" alt="">
-            <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo consectetur, voluptatibus
-                aliquam non minima. Necessitatibus dolorum doloremque expedita ullam laudantium soluta doloribus ex
-                architecto numquam consectetur temporibus, cum autem.</p>
+        <div class="imgResDiv">
+            <div class="imgDiv">
+                <img src="./Images/burger.jpg" alt="">
+                <h3>Kasap Burger</h3>
+                <p>Bol Malzemeli Efsane Burger</p>
+                <div class="pricePurchaseDiv">
+                    <p class="price">45.99 <i>TL</i></p>
+                    <button class="purchase">Satın Al</button>
+                </div>
+            </div>
         </div>
+        
+
     </div>
-    <form class="formGeneral">
+    <!-- <form class="formGeneral">
         <label for="">Ad</label>
         <input class="formElement" type="text" name="firstName" placeholder="Adınızı giriniz">
         <label for="">Soyad</label>
@@ -216,12 +300,32 @@
             <option value="en">England</option>
         </select>
         <input class="btnSubmit" type="submit" value="Kaydet">
-    </form>
+    </form> -->
 
     <div class="footer">
-        <h3>
-            Lorem && Tüm hakları saklıdır
-        </h3>
+        <ul class="footerList">
+            <li>
+                <a href="">Anasayfa</a>
+            </li>
+            <li>
+                <a href="">Hakkımızda</a>
+            </li>
+            <li>
+                <a href="">İletişim</a>
+            </li>
+        </ul>
+        <img src="./Images/burgerlogo.png" alt="" height="80px">
+        <ul class="footerList">
+            <li>
+                <a href="">Burgerler</a>
+            </li>
+            <li>
+                <a href="">Restoranlar</a>
+            </li>
+            <li>
+                <a href="">Kariyer</a>
+            </li>
+        </ul>
     </div>
 
     <script>
